--- a/api.ipynb
+++ b/api.ipynb
@@ -494,41 +494,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>440852</td>\n",
-       "      <td>248140</td>\n",
-       "      <td>14015</td>\n",
-       "      <td>178646</td>\n",
-       "      <td>23/06/2020 11:06:13</td>\n",
-       "      <td>51</td>\n",
+       "      <td>473643</td>\n",
+       "      <td>271688</td>\n",
+       "      <td>14907</td>\n",
+       "      <td>186993</td>\n",
+       "      <td>25/06/2020 10:35:13</td>\n",
+       "      <td>55</td>\n",
        "      <td>TT</td>\n",
-       "      <td>402</td>\n",
-       "      <td>3</td>\n",
+       "      <td>658</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>135796</td>\n",
-       "      <td>67706</td>\n",
-       "      <td>6283</td>\n",
-       "      <td>61793</td>\n",
-       "      <td>22/06/2020 23:26:52</td>\n",
-       "      <td>14</td>\n",
+       "      <td>142899</td>\n",
+       "      <td>73792</td>\n",
+       "      <td>6739</td>\n",
+       "      <td>62353</td>\n",
+       "      <td>24/06/2020 23:16:15</td>\n",
+       "      <td>15</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>14 cases were marked as non-covid deaths in MH...</td>\n",
+       "      <td>15 cases were marked as non-covid deaths in MH...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>62087</td>\n",
-       "      <td>34112</td>\n",
-       "      <td>794</td>\n",
-       "      <td>27181</td>\n",
-       "      <td>22/06/2020 20:05:18</td>\n",
+       "      <td>67468</td>\n",
+       "      <td>37763</td>\n",
+       "      <td>866</td>\n",
+       "      <td>28839</td>\n",
+       "      <td>24/06/2020 19:27:14</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -539,11 +539,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>62655</td>\n",
-       "      <td>36602</td>\n",
-       "      <td>2233</td>\n",
-       "      <td>23820</td>\n",
-       "      <td>22/06/2020 21:59:15</td>\n",
+       "      <td>70390</td>\n",
+       "      <td>41437</td>\n",
+       "      <td>2365</td>\n",
+       "      <td>26588</td>\n",
+       "      <td>24/06/2020 18:26:15</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -554,11 +554,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>27880</td>\n",
-       "      <td>19917</td>\n",
-       "      <td>1685</td>\n",
-       "      <td>6278</td>\n",
-       "      <td>22/06/2020 20:37:16</td>\n",
+       "      <td>29001</td>\n",
+       "      <td>21096</td>\n",
+       "      <td>1736</td>\n",
+       "      <td>6169</td>\n",
+       "      <td>24/06/2020 21:35:26</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,22 +572,22 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     440852     248140   14015  178646  23/06/2020 11:06:13   \n",
-       "1  Maharashtra     135796      67706    6283   61793  22/06/2020 23:26:52   \n",
-       "2   Tamil Nadu      62087      34112     794   27181  22/06/2020 20:05:18   \n",
-       "3        Delhi      62655      36602    2233   23820  22/06/2020 21:59:15   \n",
-       "4      Gujarat      27880      19917    1685    6278  22/06/2020 20:37:16   \n",
+       "0        Total     473643     271688   14907  186993  25/06/2020 10:35:13   \n",
+       "1  Maharashtra     142899      73792    6739   62353  24/06/2020 23:16:15   \n",
+       "2   Tamil Nadu      67468      37763     866   28839  24/06/2020 19:27:14   \n",
+       "3        Delhi      70390      41437    2365   26588  24/06/2020 18:26:15   \n",
+       "4      Gujarat      29001      21096    1736    6169  24/06/2020 21:35:26   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0              51         TT              402                3             0   \n",
-       "1              14         MH                0                0             0   \n",
+       "0              55         TT              658                0             0   \n",
+       "1              15         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
        "                                         State_Notes  \n",
        "0                                                NaN  \n",
-       "1  14 cases were marked as non-covid deaths in MH...  \n",
+       "1  15 cases were marked as non-covid deaths in MH...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
        "3  Delhi bulletins in the morning, containing dat...  \n",
        "4                                                NaN  "
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>7986</td>\n",
-       "      <td>7986</td>\n",
+       "      <td>8464</td>\n",
+       "      <td>8464</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>183</td>\n",
-       "      <td>183</td>\n",
+       "      <td>352</td>\n",
+       "      <td>352</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -898,9 +898,9 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>337</td>\n",
+       "      <td>364</td>\n",
        "      <td>285</td>\n",
-       "      <td>52</td>\n",
+       "      <td>79</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -923,14 +923,14 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       7986    7986          0         0   \n",
+       "0                Unassigned       8464    8464          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         35       3         32         0   \n",
-       "4          Foreign Evacuees        337     285         52         0   \n",
+       "4          Foreign Evacuees        364     285         79         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0              183           183                0   \n",
+       "0               0              352           352                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
@@ -994,6 +994,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Update Time Stamp</th>\n",
+       "      <th>Tested As Of</th>\n",
        "      <th>Total Samples Tested</th>\n",
        "      <th>Total Individuals Tested</th>\n",
        "      <th>Total Positive Cases</th>\n",
@@ -1012,6 +1013,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>13/03/2020 00:00:00</td>\n",
+       "      <td>13/03/2020</td>\n",
        "      <td>6500.0</td>\n",
        "      <td>5900.0</td>\n",
        "      <td>78</td>\n",
@@ -1028,6 +1030,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>18/03/2020 18:00:00</td>\n",
+       "      <td>18/03/2020</td>\n",
        "      <td>13125.0</td>\n",
        "      <td>12235.0</td>\n",
        "      <td>150</td>\n",
@@ -1044,6 +1047,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>19/03/2020 10:00:00</td>\n",
+       "      <td>19/03/2020</td>\n",
        "      <td>13316.0</td>\n",
        "      <td>12426.0</td>\n",
        "      <td>168</td>\n",
@@ -1060,6 +1064,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>19/03/2020 18:00:00</td>\n",
+       "      <td>19/03/2020</td>\n",
        "      <td>14175.0</td>\n",
        "      <td>13285.0</td>\n",
        "      <td>182</td>\n",
@@ -1076,6 +1081,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>20/03/2020 10:00:00</td>\n",
+       "      <td>20/03/2020</td>\n",
        "      <td>14376.0</td>\n",
        "      <td>13486.0</td>\n",
        "      <td>206</td>\n",
@@ -1094,19 +1100,26 @@
        "</div>"
       ],
       "text/plain": [
-       "     Update Time Stamp  Total Samples Tested  Total Individuals Tested  \\\n",
-       "0  13/03/2020 00:00:00                6500.0                    5900.0   \n",
-       "1  18/03/2020 18:00:00               13125.0                   12235.0   \n",
-       "2  19/03/2020 10:00:00               13316.0                   12426.0   \n",
-       "3  19/03/2020 18:00:00               14175.0                   13285.0   \n",
-       "4  20/03/2020 10:00:00               14376.0                   13486.0   \n",
+       "     Update Time Stamp Tested As Of  Total Samples Tested  \\\n",
+       "0  13/03/2020 00:00:00   13/03/2020                6500.0   \n",
+       "1  18/03/2020 18:00:00   18/03/2020               13125.0   \n",
+       "2  19/03/2020 10:00:00   19/03/2020               13316.0   \n",
+       "3  19/03/2020 18:00:00   19/03/2020               14175.0   \n",
+       "4  20/03/2020 10:00:00   20/03/2020               14376.0   \n",
        "\n",
-       "  Total Positive Cases  Tests conducted by Private Labs Sample Reported today  \\\n",
-       "0                   78                              NaN                   NaN   \n",
-       "1                  150                              NaN                   NaN   \n",
-       "2                  168                              NaN                   NaN   \n",
-       "3                  182                              NaN                   NaN   \n",
-       "4                  206                              NaN                   NaN   \n",
+       "   Total Individuals Tested Total Positive Cases  \\\n",
+       "0                    5900.0                   78   \n",
+       "1                   12235.0                  150   \n",
+       "2                   12426.0                  168   \n",
+       "3                   13285.0                  182   \n",
+       "4                   13486.0                  206   \n",
+       "\n",
+       "   Tests conducted by Private Labs Sample Reported today  \\\n",
+       "0                              NaN                   NaN   \n",
+       "1                              NaN                   NaN   \n",
+       "2                              NaN                   NaN   \n",
+       "3                              NaN                   NaN   \n",
+       "4                              NaN                   NaN   \n",
        "\n",
        "   Positive cases from samples reported  \\\n",
        "0                                   NaN   \n",
