--- a/api.ipynb
+++ b/api.ipynb
@@ -494,41 +494,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>567611</td>\n",
-       "      <td>335298</td>\n",
-       "      <td>16910</td>\n",
-       "      <td>215343</td>\n",
-       "      <td>30/06/2020 12:37:13</td>\n",
-       "      <td>60</td>\n",
+       "      <td>606938</td>\n",
+       "      <td>360725</td>\n",
+       "      <td>17865</td>\n",
+       "      <td>228282</td>\n",
+       "      <td>02/07/2020 18:24:25</td>\n",
+       "      <td>66</td>\n",
        "      <td>TT</td>\n",
-       "      <td>75</td>\n",
-       "      <td>27</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1717</td>\n",
+       "      <td>822</td>\n",
+       "      <td>17</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>169883</td>\n",
-       "      <td>88960</td>\n",
-       "      <td>7610</td>\n",
-       "      <td>73298</td>\n",
-       "      <td>29/06/2020 19:54:14</td>\n",
-       "      <td>15</td>\n",
+       "      <td>180298</td>\n",
+       "      <td>93154</td>\n",
+       "      <td>8053</td>\n",
+       "      <td>79075</td>\n",
+       "      <td>01/07/2020 20:48:26</td>\n",
+       "      <td>16</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>15 cases were marked as non-covid deaths in MH...</td>\n",
+       "      <td>16 cases were marked as non-covid deaths in MH...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>86224</td>\n",
-       "      <td>47749</td>\n",
-       "      <td>1141</td>\n",
-       "      <td>37334</td>\n",
-       "      <td>29/06/2020 18:50:15</td>\n",
+       "      <td>94049</td>\n",
+       "      <td>52926</td>\n",
+       "      <td>1264</td>\n",
+       "      <td>39859</td>\n",
+       "      <td>01/07/2020 18:56:26</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -539,11 +539,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>85161</td>\n",
-       "      <td>56235</td>\n",
-       "      <td>2680</td>\n",
-       "      <td>26246</td>\n",
-       "      <td>29/06/2020 21:46:14</td>\n",
+       "      <td>89802</td>\n",
+       "      <td>59992</td>\n",
+       "      <td>2803</td>\n",
+       "      <td>27007</td>\n",
+       "      <td>01/07/2020 20:38:27</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -554,11 +554,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>32023</td>\n",
-       "      <td>23248</td>\n",
-       "      <td>1828</td>\n",
-       "      <td>6947</td>\n",
-       "      <td>29/06/2020 20:26:16</td>\n",
+       "      <td>33318</td>\n",
+       "      <td>24038</td>\n",
+       "      <td>1869</td>\n",
+       "      <td>7411</td>\n",
+       "      <td>01/07/2020 22:36:27</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,22 +572,22 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     567611     335298   16910  215343  30/06/2020 12:37:13   \n",
-       "1  Maharashtra     169883      88960    7610   73298  29/06/2020 19:54:14   \n",
-       "2   Tamil Nadu      86224      47749    1141   37334  29/06/2020 18:50:15   \n",
-       "3        Delhi      85161      56235    2680   26246  29/06/2020 21:46:14   \n",
-       "4      Gujarat      32023      23248    1828    6947  29/06/2020 20:26:16   \n",
+       "0        Total     606938     360725   17865  228282  02/07/2020 18:24:25   \n",
+       "1  Maharashtra     180298      93154    8053   79075  01/07/2020 20:48:26   \n",
+       "2   Tamil Nadu      94049      52926    1264   39859  01/07/2020 18:56:26   \n",
+       "3        Delhi      89802      59992    2803   27007  01/07/2020 20:38:27   \n",
+       "4      Gujarat      33318      24038    1869    7411  01/07/2020 22:36:27   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0              60         TT               75               27             6   \n",
-       "1              15         MH                0                0             0   \n",
+       "0              66         TT             1717              822            17   \n",
+       "1              16         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
        "                                         State_Notes  \n",
        "0                                                NaN  \n",
-       "1  15 cases were marked as non-covid deaths in MH...  \n",
+       "1  16 cases were marked as non-covid deaths in MH...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
        "3  Delhi bulletins in the morning, containing dat...  \n",
        "4                                                NaN  "
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>6975</td>\n",
-       "      <td>6975</td>\n",
+       "      <td>6803</td>\n",
+       "      <td>6803</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-281</td>\n",
-       "      <td>-281</td>\n",
+       "      <td>-83</td>\n",
+       "      <td>-83</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -879,8 +879,8 @@
        "      <td>Andaman and Nicobar Islands</td>\n",
        "      <td>AN_South Andaman</td>\n",
        "      <td>South Andaman</td>\n",
-       "      <td>49</td>\n",
-       "      <td>17</td>\n",
+       "      <td>51</td>\n",
+       "      <td>19</td>\n",
        "      <td>32</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -898,14 +898,14 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>391</td>\n",
-       "      <td>294</td>\n",
-       "      <td>97</td>\n",
+       "      <td>407</td>\n",
+       "      <td>286</td>\n",
+       "      <td>121</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>20</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -923,18 +923,18 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       6975    6975          0         0   \n",
+       "0                Unassigned       6803    6803          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
-       "3             South Andaman         49      17         32         0   \n",
-       "4          Foreign Evacuees        391     294         97         0   \n",
+       "3             South Andaman         51      19         32         0   \n",
+       "4          Foreign Evacuees        407     286        121         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0             -281          -281                0   \n",
+       "0               0              -83           -83                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
-       "4               0                0             0                0   \n",
+       "4               0                4           -16               20   \n",
        "\n",
        "   Delta_Deceased District_Notes  Last_Updated  \n",
        "0               0            NaN           NaN  \n",
@@ -1210,11 +1210,11 @@
        "      <th>Total People Currently in Quarantine</th>\n",
        "      <th>Tag (People in Quarantine)</th>\n",
        "      <th>...</th>\n",
+       "      <th>Corona Enquiry Calls</th>\n",
        "      <th>Num Calls State Helpline</th>\n",
        "      <th>Source1</th>\n",
-       "      <th>Unnamed: 21</th>\n",
        "      <th>Source2</th>\n",
-       "      <th>Unnamed: 23</th>\n",
+       "      <th>Unnamed: 22</th>\n",
        "      <th>Test positivity rate</th>\n",
        "      <th>Tests per thousand</th>\n",
        "      <th>Tests per million</th>\n",
@@ -1237,8 +1237,8 @@
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://t.me/indiacovid/2550</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>https://t.me/indiacovid/2550</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.86%</td>\n",
@@ -1260,9 +1260,9 @@
        "      <td>614.0</td>\n",
        "      <td>Institutional</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>280.0</td>\n",
        "      <td>https://t.me/indiacovid/3147?single</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.01%</td>\n",
@@ -1284,9 +1284,9 @@
        "      <td>724.0</td>\n",
        "      <td>Institutional</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>298.0</td>\n",
        "      <td>https://t.me/indiacovid/3365?single</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.16%</td>\n",
@@ -1297,7 +1297,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 29 columns</p>\n",
+       "<p>3 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1316,22 +1316,27 @@
        "1                                 614.0              Institutional  ...   \n",
        "2                                 724.0              Institutional  ...   \n",
        "\n",
-       "   Num Calls State Helpline                              Source1  Unnamed: 21  \\\n",
-       "0                       NaN         https://t.me/indiacovid/2550          NaN   \n",
-       "1                     280.0  https://t.me/indiacovid/3147?single          NaN   \n",
-       "2                     298.0  https://t.me/indiacovid/3365?single          NaN   \n",
+       "   Corona Enquiry Calls  Num Calls State Helpline  \\\n",
+       "0                   NaN                       NaN   \n",
+       "1                   NaN                     280.0   \n",
+       "2                   NaN                     298.0   \n",
        "\n",
-       "   Source2  Unnamed: 23  Test positivity rate  Tests per thousand  \\\n",
-       "0      NaN          NaN                 0.86%                3.53   \n",
-       "1      NaN          NaN                 1.01%                6.75   \n",
-       "2      NaN          NaN                 1.16%                7.17   \n",
+       "                               Source1  Source2  Unnamed: 22  \\\n",
+       "0         https://t.me/indiacovid/2550      NaN          NaN   \n",
+       "1  https://t.me/indiacovid/3147?single      NaN          NaN   \n",
+       "2  https://t.me/indiacovid/3365?single      NaN          NaN   \n",
        "\n",
-       "   Tests per million  Tests per positive case  Population NCP 2019 Projection  \n",
-       "0             3534.0                    117.0                        397000.0  \n",
-       "1             6748.0                     99.0                        397000.0  \n",
-       "2             7174.0                     86.0                        397000.0  \n",
+       "   Test positivity rate  Tests per thousand  Tests per million  \\\n",
+       "0                 0.86%                3.53             3534.0   \n",
+       "1                 1.01%                6.75             6748.0   \n",
+       "2                 1.16%                7.17             7174.0   \n",
        "\n",
-       "[3 rows x 29 columns]"
+       "   Tests per positive case  Population NCP 2019 Projection  \n",
+       "0                    117.0                        397000.0  \n",
+       "1                     99.0                        397000.0  \n",
+       "2                     86.0                        397000.0  \n",
+       "\n",
+       "[3 rows x 28 columns]"
       ]
      },
      "execution_count": 8,
