--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -1339,37 +1339,70 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3454</th>\n",
-       "      <td>5/5/2020</td>\n",
-       "      <td>Punjab</td>\n",
-       "      <td>121</td>\n",
-       "      <td>31.1471</td>\n",
-       "      <td>75.3412</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1233</td>\n",
+       "      <th>556</th>\n",
+       "      <td>2020-04-19</td>\n",
+       "      <td>Uttarakhand</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30.0668</td>\n",
+       "      <td>79.0193</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2447</th>\n",
-       "      <td>3/10/2020</td>\n",
-       "      <td>Uttar Pradesh</td>\n",
+       "      <th>323</th>\n",
+       "      <td>2020-04-09</td>\n",
+       "      <td>Gujarat</td>\n",
+       "      <td>25</td>\n",
+       "      <td>22.2587</td>\n",
+       "      <td>71.1924</td>\n",
+       "      <td>16</td>\n",
+       "      <td>179</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>Goa</td>\n",
        "      <td>0</td>\n",
-       "      <td>26.8467</td>\n",
-       "      <td>80.9462</td>\n",
+       "      <td>15.2993</td>\n",
+       "      <td>74.1240</td>\n",
        "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>2020-04-10</td>\n",
+       "      <td>Chandigarh</td>\n",
        "      <td>7</td>\n",
+       "      <td>30.7333</td>\n",
+       "      <td>76.7794</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2520</th>\n",
-       "      <td>3/15/2020</td>\n",
-       "      <td>Andhra Pradesh</td>\n",
+       "      <th>3228</th>\n",
+       "      <td>5/25/2020</td>\n",
+       "      <td>Ladakh</td>\n",
+       "      <td>43</td>\n",
+       "      <td>34.2996</td>\n",
+       "      <td>78.2932</td>\n",
        "      <td>0</td>\n",
-       "      <td>15.9129</td>\n",
-       "      <td>79.7400</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>52</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1880</th>\n",
+       "      <td>2020-06-14</td>\n",
+       "      <td>Ladakh</td>\n",
+       "      <td>68</td>\n",
+       "      <td>34.2996</td>\n",
+       "      <td>78.2932</td>\n",
+       "      <td>1</td>\n",
+       "      <td>437</td>\n",
+       "      <td>368.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3323</th>\n",
@@ -1383,69 +1416,36 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2483</th>\n",
-       "      <td>3/13/2020</td>\n",
-       "      <td>Uttar Pradesh</td>\n",
+       "      <th>1249</th>\n",
+       "      <td>2020-05-14</td>\n",
+       "      <td>Arunachal Pradesh</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28.2180</td>\n",
+       "      <td>94.7278</td>\n",
        "      <td>0</td>\n",
-       "      <td>26.8467</td>\n",
-       "      <td>80.9462</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>685</th>\n",
-       "      <td>2020-04-23</td>\n",
-       "      <td>Tripura</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23.9408</td>\n",
-       "      <td>91.9882</td>\n",
+       "      <th>203</th>\n",
+       "      <td>2020-04-06</td>\n",
+       "      <td>Manipur</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.6637</td>\n",
+       "      <td>93.9063</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2384</th>\n",
-       "      <td>2020-06-30</td>\n",
-       "      <td>Ladakh</td>\n",
-       "      <td>616</td>\n",
-       "      <td>34.2996</td>\n",
-       "      <td>78.2932</td>\n",
-       "      <td>1</td>\n",
-       "      <td>964</td>\n",
-       "      <td>347.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1310</th>\n",
-       "      <td>2020-05-16</td>\n",
-       "      <td>Arunachal Pradesh</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28.2180</td>\n",
-       "      <td>94.7278</td>\n",
+       "      <th>2732</th>\n",
+       "      <td>3/26/2020</td>\n",
+       "      <td>Mizoram</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.1645</td>\n",
+       "      <td>92.9376</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1626</th>\n",
-       "      <td>2020-06-06</td>\n",
-       "      <td>Arunachal Pradesh</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28.2180</td>\n",
-       "      <td>94.7278</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>44.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1148</th>\n",
-       "      <td>2020-05-11</td>\n",
-       "      <td>Karnataka</td>\n",
-       "      <td>424</td>\n",
-       "      <td>15.3173</td>\n",
-       "      <td>75.7139</td>\n",
-       "      <td>31</td>\n",
-       "      <td>848</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1454,28 +1454,28 @@
       ],
       "text/plain": [
        "            Date Name of State / UT  Cured/Discharged/Migrated  Latitude  \\\n",
-       "3454    5/5/2020             Punjab                        121   31.1471   \n",
-       "2447   3/10/2020      Uttar Pradesh                          0   26.8467   \n",
-       "2520   3/15/2020     Andhra Pradesh                          0   15.9129   \n",
+       "556   2020-04-19        Uttarakhand                          9   30.0668   \n",
+       "323   2020-04-09            Gujarat                         25   22.2587   \n",
+       "106   2020-04-01                Goa                          0   15.2993   \n",
+       "346   2020-04-10         Chandigarh                          7   30.7333   \n",
+       "3228   5/25/2020             Ladakh                         43   34.2996   \n",
+       "1880  2020-06-14             Ladakh                         68   34.2996   \n",
        "3323    5/3/2020         Chandigarh                         17   30.7333   \n",
-       "2483   3/13/2020      Uttar Pradesh                          0   26.8467   \n",
-       "685   2020-04-23            Tripura                          1   23.9408   \n",
-       "2384  2020-06-30             Ladakh                        616   34.2996   \n",
-       "1310  2020-05-16  Arunachal Pradesh                          1   28.2180   \n",
-       "1626  2020-06-06  Arunachal Pradesh                          1   28.2180   \n",
-       "1148  2020-05-11          Karnataka                        424   15.3173   \n",
+       "1249  2020-05-14  Arunachal Pradesh                          1   28.2180   \n",
+       "203   2020-04-06            Manipur                          0   24.6637   \n",
+       "2732   3/26/2020            Mizoram                          0   23.1645   \n",
        "\n",
        "      Longitude  Death  Total Confirmed cases  Active Cases*  \n",
-       "3454    75.3412     23                   1233            NaN  \n",
-       "2447    80.9462      0                      7            NaN  \n",
-       "2520    79.7400      0                      1            NaN  \n",
+       "556     79.0193      0                     42            NaN  \n",
+       "323     71.1924     16                    179            NaN  \n",
+       "106     74.1240      0                      5            NaN  \n",
+       "346     76.7794      0                     18            NaN  \n",
+       "3228    78.2932      0                     52            NaN  \n",
+       "1880    78.2932      1                    437          368.0  \n",
        "3323    76.7794      0                     88            NaN  \n",
-       "2483    80.9462      0                     11            NaN  \n",
-       "685     91.9882      0                      2            NaN  \n",
-       "2384    78.2932      1                    964          347.0  \n",
-       "1310    94.7278      0                      1            NaN  \n",
-       "1626    94.7278      0                     45           44.0  \n",
-       "1148    75.7139     31                    848            NaN  "
+       "1249    94.7278      0                      1            NaN  \n",
+       "203     93.9063      0                      2            NaN  \n",
+       "2732    92.9376      0                      1            NaN  "
       ]
      },
      "execution_count": 15,
@@ -1856,43 +1856,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>342</th>\n",
-       "      <td>2020-03-25</td>\n",
-       "      <td>Chhattisgarh</td>\n",
-       "      <td>21.2787</td>\n",
-       "      <td>81.8661</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>3278</th>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>Jammu and Kashmir</td>\n",
+       "      <td>33.7782</td>\n",
+       "      <td>76.5762</td>\n",
+       "      <td>6088</td>\n",
+       "      <td>85</td>\n",
+       "      <td>3531</td>\n",
+       "      <td>132</td>\n",
+       "      <td>3</td>\n",
+       "      <td>149</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2762</th>\n",
-       "      <td>2020-06-08</td>\n",
+       "      <th>1324</th>\n",
+       "      <td>2020-04-26</td>\n",
        "      <td>Mizoram</td>\n",
        "      <td>23.1645</td>\n",
        "      <td>92.9376</td>\n",
-       "      <td>34</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>814</th>\n",
-       "      <td>2020-04-10</td>\n",
-       "      <td>Manipur</td>\n",
-       "      <td>24.6637</td>\n",
-       "      <td>93.9063</td>\n",
-       "      <td>2</td>\n",
+       "      <th>3433</th>\n",
+       "      <td>2020-06-28</td>\n",
+       "      <td>Sikkim</td>\n",
+       "      <td>27.5330</td>\n",
+       "      <td>88.5122</td>\n",
+       "      <td>87</td>\n",
        "      <td>0</td>\n",
+       "      <td>46</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1900,19 +1900,19 @@
       ],
       "text/plain": [
        "           Date Name of State / UT  Latitude  Longitude  \\\n",
-       "342  2020-03-25       Chhattisgarh   21.2787    81.8661   \n",
-       "2762 2020-06-08            Mizoram   23.1645    92.9376   \n",
-       "814  2020-04-10            Manipur   24.6637    93.9063   \n",
+       "3278 2020-06-23  Jammu and Kashmir   33.7782    76.5762   \n",
+       "1324 2020-04-26            Mizoram   23.1645    92.9376   \n",
+       "3433 2020-06-28             Sikkim   27.5330    88.5122   \n",
        "\n",
        "      Total Confirmed cases  Death  Cured/Discharged/Migrated  New cases  \\\n",
-       "342                       1      0                          0          0   \n",
-       "2762                     34      0                          1         10   \n",
-       "814                       2      0                          1          1   \n",
+       "3278                   6088     85                       3531        132   \n",
+       "1324                      1      0                          0          0   \n",
+       "3433                     87      0                         46          1   \n",
        "\n",
        "      New deaths  New recovered  \n",
-       "342            0              0  \n",
-       "2762           0              0  \n",
-       "814            0              0  "
+       "3278           3            149  \n",
+       "1324           0              0  \n",
+       "3433           0              7  "
       ]
      },
      "execution_count": 24,
