--- a/api.ipynb
+++ b/api.ipynb
@@ -494,41 +494,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>795729</td>\n",
-       "      <td>496048</td>\n",
-       "      <td>21638</td>\n",
-       "      <td>277942</td>\n",
-       "      <td>10/07/2020 13:14:06</td>\n",
-       "      <td>101</td>\n",
+       "      <td>822674</td>\n",
+       "      <td>516308</td>\n",
+       "      <td>22152</td>\n",
+       "      <td>283835</td>\n",
+       "      <td>11/07/2020 12:14:06</td>\n",
+       "      <td>379</td>\n",
        "      <td>TT</td>\n",
-       "      <td>887</td>\n",
-       "      <td>88</td>\n",
-       "      <td>15</td>\n",
+       "      <td>70</td>\n",
+       "      <td>67</td>\n",
+       "      <td>8</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>230599</td>\n",
-       "      <td>127259</td>\n",
-       "      <td>9667</td>\n",
-       "      <td>93654</td>\n",
-       "      <td>09/07/2020 19:55:08</td>\n",
-       "      <td>19</td>\n",
+       "      <td>238461</td>\n",
+       "      <td>132625</td>\n",
+       "      <td>9893</td>\n",
+       "      <td>95647</td>\n",
+       "      <td>10/07/2020 22:28:08</td>\n",
+       "      <td>296</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>19 cases were marked as non-covid deaths in MH...</td>\n",
+       "      <td>296 cases were marked as non-covid deaths in M...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>126581</td>\n",
-       "      <td>78161</td>\n",
-       "      <td>1765</td>\n",
-       "      <td>46655</td>\n",
-       "      <td>09/07/2020 20:28:08</td>\n",
+       "      <td>130261</td>\n",
+       "      <td>82324</td>\n",
+       "      <td>1829</td>\n",
+       "      <td>46108</td>\n",
+       "      <td>10/07/2020 19:56:10</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -539,11 +539,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>107051</td>\n",
-       "      <td>82226</td>\n",
-       "      <td>3258</td>\n",
-       "      <td>21567</td>\n",
-       "      <td>09/07/2020 20:50:08</td>\n",
+       "      <td>109140</td>\n",
+       "      <td>84694</td>\n",
+       "      <td>3300</td>\n",
+       "      <td>21146</td>\n",
+       "      <td>10/07/2020 20:40:13</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -554,11 +554,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>39280</td>\n",
-       "      <td>27742</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>9529</td>\n",
-       "      <td>09/07/2020 21:01:37</td>\n",
+       "      <td>40155</td>\n",
+       "      <td>28183</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>9949</td>\n",
+       "      <td>10/07/2020 20:21:08</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,22 +572,22 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     795729     496048   21638  277942  10/07/2020 13:14:06   \n",
-       "1  Maharashtra     230599     127259    9667   93654  09/07/2020 19:55:08   \n",
-       "2   Tamil Nadu     126581      78161    1765   46655  09/07/2020 20:28:08   \n",
-       "3        Delhi     107051      82226    3258   21567  09/07/2020 20:50:08   \n",
-       "4      Gujarat      39280      27742    2009    9529  09/07/2020 21:01:37   \n",
+       "0        Total     822674     516308   22152  283835  11/07/2020 12:14:06   \n",
+       "1  Maharashtra     238461     132625    9893   95647  10/07/2020 22:28:08   \n",
+       "2   Tamil Nadu     130261      82324    1829   46108  10/07/2020 19:56:10   \n",
+       "3        Delhi     109140      84694    3300   21146  10/07/2020 20:40:13   \n",
+       "4      Gujarat      40155      28183    2023    9949  10/07/2020 20:21:08   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0             101         TT              887               88            15   \n",
-       "1              19         MH                0                0             0   \n",
+       "0             379         TT               70               67             8   \n",
+       "1             296         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
        "                                         State_Notes  \n",
        "0                                                NaN  \n",
-       "1  19 cases were marked as non-covid deaths in MH...  \n",
+       "1  296 cases were marked as non-covid deaths in M...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
        "3  Delhi bulletins in the morning, containing dat...  \n",
        "4                                                NaN  "
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>4132</td>\n",
-       "      <td>4132</td>\n",
+       "      <td>3387</td>\n",
+       "      <td>3387</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-224</td>\n",
-       "      <td>-224</td>\n",
+       "      <td>-745</td>\n",
+       "      <td>-745</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -899,8 +899,8 @@
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
        "      <td>424</td>\n",
-       "      <td>127</td>\n",
-       "      <td>297</td>\n",
+       "      <td>126</td>\n",
+       "      <td>298</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -923,14 +923,14 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       4132    4132          0         0   \n",
+       "0                Unassigned       3387    3387          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         51      19         32         0   \n",
-       "4          Foreign Evacuees        424     127        297         0   \n",
+       "4          Foreign Evacuees        424     126        298         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0             -224          -224                0   \n",
+       "0               0             -745          -745                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
